Add input_example to notebooks

--- a/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
+++ b/notebooks/ml/Experiment/Tensorflow/mnist.ipynb
@@ -97,37 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>30</td><td>application_1637773802226_0039</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0039/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0039_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def keras_mnist():\n",
     "    \n",
@@ -239,11 +211,14 @@
     "    conn = hsml.connection()\n",
     "    mr = conn.get_model_registry()\n",
     "    \n",
-    "    input_schema = Schema([{'type': 'uint8', 'shape': [784], 'description': 'Flattened 28x28 mnist grayscale images'}])\n",
-    "    output_schema = Schema([{'type': 'float32', 'shape': [10], 'description': 'Predictions per image label'}])\n",
+    "    input_example = np.random.randint(0, high=256, size=784, dtype=np.uint8)\n",
     "    \n",
-    "    tf_model = mr.tensorflow.create_model(\"mnist_tf\", \n",
+    "    input_schema = Schema(input_example)\n",
+    "    output_schema = Schema([{'type': 'float32', 'shape': [10], 'description': 'Predictions per image category'}])\n",
+    "    \n",
+    "    tf_model = mr.tensorflow.create_model(\"mnist_tf\",\n",
     "                                          metrics=metrics,\n",
+    "                                          input_example=input_example,\n",
     "                                          model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "    \n",
     "    tf_model.save(export_path)\n",
@@ -253,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +237,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1637773802226_0039_1', {'accuracy': 0.75, 'log': 'Experiments/application_1637773802226_0039_1/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1639488860019_0007_2', {'accuracy': 0.65625, 'log': 'Experiments/application_1639488860019_0007_2/output.log'})"
      ]
     }
    ],
