--- a/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/tensorflow/end_to_end_tensorflow.ipynb
@@ -116,7 +116,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>27</td><td>application_1637773802226_0036</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0036/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0036_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1639488860019_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1639488860019_0008/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1639488860019_0008_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -248,11 +248,14 @@
     "    conn = hsml.connection()\n",
     "    mr = conn.get_model_registry()\n",
     "    \n",
-    "    input_schema = Schema([{'type': 'uint8', 'shape': [784], 'description': 'Flattened 28x28 mnist grayscale images'}])\n",
-    "    output_schema = Schema([{'type': 'float32', 'shape': [10], 'description': 'Predictions per image label'}])\n",
+    "    input_example = np.random.randint(0, high=256, size=784, dtype=np.uint8)\n",
+    "    \n",
+    "    input_schema = Schema(input_example)\n",
+    "    output_schema = Schema([{'type': 'float32', 'shape': [10], 'description': 'Predictions per image category'}])\n",
     "    \n",
     "    tf_model = mr.tensorflow.create_model(\"mnist_e2e\",\n",
     "                                          metrics=metrics,\n",
+    "                                          input_example=input_example,\n",
     "                                          model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "    \n",
     "    tf_model.save(export_path)   \n",
@@ -271,7 +274,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1637773802226_0036_1', {'accuracy': 0.6875, 'log': 'Experiments/application_1637773802226_0036_1/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Experiments/application_1639488860019_0008_1', {'accuracy': 0.75, 'log': 'Experiments/application_1639488860019_0008_1/output.log'})"
      ]
     }
    ],
@@ -351,7 +354,7 @@
      "text": [
       "Model name: mnist_e2e\n",
       "Model version: 1\n",
-      "{'accuracy': '0.6875'}"
+      "{'accuracy': '0.75'}"
      ]
     }
    ],
@@ -381,17 +384,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inferring model server from artifact files: TENSORFLOW_SERVING\n",
-      "Creating serving mnist for artifact /Projects/demo_ml_meb10000//Models/mnist_e2e ...\n",
-      "Serving mnist successfully created"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create serving instance\n",
     "SERVING_NAME = \"mnist\"\n",
@@ -435,7 +428,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'Running'"
+      "'Stopped'"
      ]
     }
    ],
@@ -520,16 +513,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'predictions': [[0.0, 0.0, 4.44728275e-32, 0.0, 1.47784481e-34, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 2.99186795e-22, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}\n",
-      "{'predictions': [[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]}"
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}\n",
+      "{'predictions': [[0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]]}"
      ]
     }
    ],
@@ -620,41 +613,41 @@
      "output_type": "stream",
      "text": [
       "timeout.. no more messages to read from topic\n",
-      "serving: mnist, version: 1, timestamp: 1638541438680,\n",
+      "serving: mnist, version: 1, timestamp: 1639748317833,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 4.44728275e-32, 0.0, 1.47784481e-34, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541438755,\n",
+      "serving: mnist, version: 1, timestamp: 1639748317955,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541438834,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318115,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541438903,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318202,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541438973,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318322,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541439055,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318439,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541439146,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318584,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 2.99186795e-22, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541439227,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318668,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]\n",
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "\n",
-      "serving: mnist, version: 1, timestamp: 1638541439300,\n",
+      "serving: mnist, version: 1, timestamp: 1639748318787,\n",
       "         http_response_code: 200, model_server: TENSORFLOW_SERVING, serving_tool: DEFAULT\n",
-      "predictions: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0]"
+      "predictions: [0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]"
      ]
     }
    ],
