--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>28</td><td>application_1637773802226_0037</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1637773802226_0037/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1637773802226_0037_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>6</td><td>application_1639488860019_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1639488860019_0009/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1639488860019_0009_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -319,7 +319,31 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An error was encountered:\n",
+      "Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
+      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/feature_group.py\", line 839, in save\n",
+      "    fg_job = self._feature_group_engine.save(self, feature_dataframe, write_options)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_engine.py\", line 51, in save\n",
+      "    self._feature_group_api.save(feature_group)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_api.py\", line 49, in save\n",
+      "    _client._send_request(\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/decorators.py\", line 35, in if_connected\n",
+      "    return fn(inst, *args, **kwargs)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/client/base.py\", line 156, in _send_request\n",
+      "    raise exceptions.RestAPIError(url, response)\n",
+      "hsfs.client.exceptions.RestAPIError: Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
+      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "iris_features = fs.create_feature_group(name=\"iris_features\", version=1, time_travel_format=None)\n",
     "iris_features.save(iris_df3)"
@@ -329,7 +353,31 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "An error was encountered:\n",
+      "Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
+      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/feature_group.py\", line 839, in save\n",
+      "    fg_job = self._feature_group_engine.save(self, feature_dataframe, write_options)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_engine.py\", line 51, in save\n",
+      "    self._feature_group_api.save(feature_group)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_api.py\", line 49, in save\n",
+      "    _client._send_request(\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/decorators.py\", line 35, in if_connected\n",
+      "    return fn(inst, *args, **kwargs)\n",
+      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/client/base.py\", line 156, in _send_request\n",
+      "    raise exceptions.RestAPIError(url, response)\n",
+      "hsfs.client.exceptions.RestAPIError: Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
+      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "iris_labels_lookup = fs.create_feature_group(name=\"iris_labels_lookup\", version=1, time_travel_format=None)\n",
     "iris_labels_lookup.save(lookup_df)"
@@ -441,7 +489,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.98"
+      "0.9733333333333334"
      ]
     }
    ],
@@ -465,17 +513,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started copying local path iris_knn.pkl to hdfs path hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000//Resources/iris_flower/iris_knn.pkl\n",
-      "\n",
-      "Finished copying"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "joblib.dump(iris_knn, IRIS_FLOWER_MODEL_PKL)\n",
     "hdfs.mkdir(IRIS_FLOWER_RESOURCES_PATH)\n",
@@ -519,8 +557,8 @@
      "text": [
       "Connected. Call `.close()` to terminate connection gracefully.\n",
       "Exported model irisflowerclassifier with version 1\n",
-      "<hsml.sklearn.model.Model object at 0x7fdcd5bc07f0>\n",
-      "Model export complete: 100%|##########| 6/6 [00:06<00:00,  1.10s/it]                   "
+      "<hsml.sklearn.model.Model object at 0x7f7bfdbfe100>\n",
+      "Model export complete: 100%|##########| 6/6 [00:09<00:00,  1.53s/it]                   "
      ]
     }
    ],
@@ -538,7 +576,8 @@
     "mr = conn.get_model_registry()\n",
     "\n",
     "tf_model = mr.sklearn.create_model(MODEL_NAME, \n",
-    "                                   metrics={'accuracy': acc}, \n",
+    "                                   metrics={'accuracy': acc},\n",
+    "                                   input_example=x_df,\n",
     "                                   model_schema=ModelSchema(input_schema=input_schema, output_schema=output_schema))\n",
     "\n",
     "tf_model.save(IRIS_FLOWER_RESOURCES_PATH)"
@@ -554,6 +593,7 @@
      "output_type": "stream",
      "text": [
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1\n",
+      "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/input_example.json\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_knn.pkl\n",
       "hdfs://rpc.namenode.service.consul:8020/Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/model_schema.json\n",
@@ -635,7 +675,7 @@
      "text": [
       "Model name: irisflowerclassifier\n",
       "Model version: 1\n",
-      "{'accuracy': '0.98'}"
+      "{'accuracy': '0.9733333333333334'}"
      ]
     }
    ],
@@ -660,17 +700,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inferring model server from artifact files: FLASK\n",
-      "Creating serving irisflowerclassifier for artifact /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py ...\n",
-      "Serving irisflowerclassifier successfully created"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create serving\n",
     "SERVING_NAME = MODEL_NAME\n",
@@ -730,7 +760,7 @@
       "Info: \tid: 1,\n",
       "        model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py,\n",
       "        model_version: 1,\n",
-      "        artifact_version: None,\n",
+      "        artifact_version: 0,\n",
       "        model_server: FLASK,\n",
       "        serving_tool: DEFAULT"
      ]
@@ -763,15 +793,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "id: 1, name: irisflowerclassifier, model_path: /Projects/demo_ml_meb10000/Models/irisflowerclassifier/1/iris_flower_classifier.py, model_name: irisflowerclassifier, model_version: 1, artifact_version: None, transformer: None, model_server: FLASK, serving_tool: DEFAULT, requested_instances: 1, available_instances: 1, available_transformer_instances: None, predictor_resource_config: {'cores': 1, 'memory': 1024, 'gpus': 0}, creator: Admin Admin, created: 2021-11-29T13:21:30Z, status: Running, kafka_topic_dto: <hops.kafka.KafkaTopicDTO object at 0x7fdcd5bc0700>"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serving.describe(SERVING_NAME)"
    ]
@@ -801,16 +823,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stopping serving with name: irisflowerclassifier...\n",
-      "Serving with name: irisflowerclassifier successfully stopped"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if serving.get_status(SERVING_NAME) == \"Running\":\n",
     "    serving.stop(SERVING_NAME)\n",
@@ -828,16 +841,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting serving with name: irisflowerclassifier...\n",
-      "Serving with name: irisflowerclassifier successfully started"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "serving.start(SERVING_NAME)"
    ]
@@ -883,26 +887,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'inputs': [[3.8289091956756565, 2.9979919100313888, 7.068052899686433, 2.491584774568385]]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
+      "{'inputs': [[3.127078402026746, 4.75059328961555, 1.0262254343278514, 7.252819502629972]]}\n",
       "{'predictions': [0]}\n",
+      "{'inputs': [[4.499536390796084, 4.711945423658369, 1.7276360143533938, 7.308820276821985]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[4.7641940157667815, 5.181353430629962, 6.011344032097016, 3.0041322572422966]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[7.010346946471624, 1.4436704498189665, 4.88126545760927, 4.717046040344853]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[1.1508570808897178, 5.717005948546537, 4.831931668693281, 5.037939498398574]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[3.03577920988238, 3.7832663401440922, 2.6728806209853193, 3.902587077760315]]}\n",
       "{'predictions': [1]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
+      "{'inputs': [[7.870013766653997, 6.780612885422445, 1.1119125032388553, 6.016428335415707]]}\n",
       "{'predictions': [1]}\n",
+      "{'inputs': [[6.132035754526192, 6.915270001129205, 7.400579021324946, 1.7296541041275217]]}\n",
       "{'predictions': [2]}\n",
+      "{'inputs': [[5.576370359195122, 4.538209922793779, 7.758132510938234, 5.68089156518003]]}\n",
       "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
-      "{'predictions': [2]}\n",
+      "{'inputs': [[5.22626904422254, 1.3216720891422296, 2.7794783845664557, 4.881540020133217]]}\n",
       "{'predictions': [1]}\n",
-      "{'predictions': [0]}"
+      "{'inputs': [[2.8533709161423193, 6.2901731496519355, 4.92323408460309, 6.754459005881102]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[7.747419914402087, 4.4234812534242325, 1.5186912482885724, 4.803661314633349]]}\n",
+      "{'predictions': [1]}\n",
+      "{'inputs': [[2.4025730294155783, 6.42657349799176, 7.397106719210798, 5.08047697673551]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[1.6911007033876524, 2.1451355133814123, 2.61697768371193, 7.154628018713997]]}\n",
+      "{'predictions': [1]}\n",
+      "{'inputs': [[3.17112488779519, 5.507380060525274, 4.6249284076446875, 3.652520299163901]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[3.292700001059259, 6.386408547839151, 1.0250830409732417, 3.0695664329279286]]}\n",
+      "{'predictions': [0]}\n",
+      "{'inputs': [[1.4743913950013101, 3.9728508331993493, 1.9481521341933141, 2.7364483045558456]]}\n",
+      "{'predictions': [0]}\n",
+      "{'inputs': [[4.450733999137004, 6.4703985528584385, 7.514920784288283, 4.139633312728548]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[6.89074529304852, 3.521352437312861, 2.7102199685019785, 1.429325287316616]]}\n",
+      "{'predictions': [1]}"
      ]
     }
    ],
@@ -911,6 +935,7 @@
     "\n",
     "for i in range(20):\n",
     "    data = {\"inputs\" : [[random.uniform(1, 8) for i in range(NUM_FEATURES)]]}\n",
+    "    print(data)\n",
     "    response = serving.make_inference_request(SERVING_NAME, data)\n",
     "    print(response)"
    ]
@@ -998,20 +1023,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "timeout.. no more messages to read from topic\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965221,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1639749130555,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965289,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1639749130837,\n",
+      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
+      "predictions: 0, prediction_label:Setosa\n",
+      "\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1639749130956,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965393,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1639749131094,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1638541965482,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1639749131213,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica"
      ]
