--- a/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
+++ b/notebooks/ml/end_to_end_pipeline/sklearn/end_to_end_sklearn.ipynb
@@ -124,7 +124,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>6</td><td>application_1639488860019_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1639488860019_0009/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1639488860019_0009_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>4</td><td>application_1640029426455_0007</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1640029426455_0007/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1640029426455_0007_01_000001/demo_ml_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -319,31 +319,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An error was encountered:\n",
-      "Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
-      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/feature_group.py\", line 839, in save\n",
-      "    fg_job = self._feature_group_engine.save(self, feature_dataframe, write_options)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_engine.py\", line 51, in save\n",
-      "    self._feature_group_api.save(feature_group)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_api.py\", line 49, in save\n",
-      "    _client._send_request(\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/decorators.py\", line 35, in if_connected\n",
-      "    return fn(inst, *args, **kwargs)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/client/base.py\", line 156, in _send_request\n",
-      "    raise exceptions.RestAPIError(url, response)\n",
-      "hsfs.client.exceptions.RestAPIError: Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
-      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris_features = fs.create_feature_group(name=\"iris_features\", version=1, time_travel_format=None)\n",
     "iris_features.save(iris_df3)"
@@ -353,31 +329,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "An error was encountered:\n",
-      "Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
-      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/feature_group.py\", line 839, in save\n",
-      "    fg_job = self._feature_group_engine.save(self, feature_dataframe, write_options)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_engine.py\", line 51, in save\n",
-      "    self._feature_group_api.save(feature_group)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/core/feature_group_api.py\", line 49, in save\n",
-      "    _client._send_request(\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/decorators.py\", line 35, in if_connected\n",
-      "    return fn(inst, *args, **kwargs)\n",
-      "  File \"/srv/hops/anaconda/envs/theenv/lib/python3.8/site-packages/hsfs/client/base.py\", line 156, in _send_request\n",
-      "    raise exceptions.RestAPIError(url, response)\n",
-      "hsfs.client.exceptions.RestAPIError: Metadata operation error: (url: https://hopsworks.glassfish.service.consul:8182/hopsworks-api/api/project/178/featurestores/125/featuregroups). Server response: \n",
-      "HTTP code: 400, HTTP reason: Bad Request, error code: 270089, error msg: The feature group you are trying to create does already exist., user msg: project: demo_ml_meb10000, featurestoreId: 125\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "iris_labels_lookup = fs.create_feature_group(name=\"iris_labels_lookup\", version=1, time_travel_format=None)\n",
     "iris_labels_lookup.save(lookup_df)"
@@ -489,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9733333333333334"
+      "0.98"
      ]
     }
    ],
@@ -557,8 +509,8 @@
      "text": [
       "Connected. Call `.close()` to terminate connection gracefully.\n",
       "Exported model irisflowerclassifier with version 1\n",
-      "<hsml.sklearn.model.Model object at 0x7f7bfdbfe100>\n",
-      "Model export complete: 100%|##########| 6/6 [00:09<00:00,  1.53s/it]                   "
+      "<hsml.sklearn.model.Model object at 0x7f3aa6ab5fd0>\n",
+      "Model export complete: 100%|##########| 6/6 [00:09<00:00,  1.60s/it]                   "
      ]
     }
    ],
@@ -675,7 +627,7 @@
      "text": [
       "Model name: irisflowerclassifier\n",
       "Model version: 1\n",
-      "{'accuracy': '0.9733333333333334'}"
+      "{'accuracy': '0.98'}"
      ]
     }
    ],
@@ -722,8 +674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "irisflowerclassifier\n",
-      "mnist"
+      "irisflowerclassifier"
      ]
     }
    ],
@@ -887,46 +838,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'inputs': [[3.8289091956756565, 2.9979919100313888, 7.068052899686433, 2.491584774568385]]}\n",
+      "{'inputs': [[2.6540398666874823, 7.568800587752348, 5.738836759879631, 2.199690465146779]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[3.127078402026746, 4.75059328961555, 1.0262254343278514, 7.252819502629972]]}\n",
+      "{'inputs': [[5.968634191410266, 2.4040762622950336, 7.834639512665859, 2.5860830806081148]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[6.987777673014331, 2.596674703791047, 3.0958956562394584, 6.207519483587967]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[2.3227535219465842, 1.6280204665559674, 6.113086486730387, 5.803450394431045]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[3.6242736294347058, 1.2951556560196151, 4.215423923126773, 6.867955505983961]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[5.418496512218132, 1.468588369851811, 1.6361176339997714, 4.142621669523214]]}\n",
+      "{'predictions': [1]}\n",
+      "{'inputs': [[3.8178373764585216, 6.645542870942926, 5.944089680594769, 3.3697098745657765]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[6.207332816344927, 6.253407305307914, 2.893754255148087, 7.911809101319298]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[7.1630010428399915, 7.168608138657474, 3.090914691352653, 1.262013943196631]]}\n",
       "{'predictions': [0]}\n",
-      "{'inputs': [[4.499536390796084, 4.711945423658369, 1.7276360143533938, 7.308820276821985]]}\n",
+      "{'inputs': [[6.725361395282784, 4.286659837341885, 6.156378266489909, 2.6705593171304387]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[4.7641940157667815, 5.181353430629962, 6.011344032097016, 3.0041322572422966]]}\n",
+      "{'inputs': [[5.16616795017345, 1.1542533850936527, 6.945345120658225, 5.082204027369219]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[7.010346946471624, 1.4436704498189665, 4.88126545760927, 4.717046040344853]]}\n",
+      "{'inputs': [[4.4774032553038605, 2.8928713845053244, 5.3008702618595205, 2.0883647143461492]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[1.1508570808897178, 5.717005948546537, 4.831931668693281, 5.037939498398574]]}\n",
+      "{'inputs': [[2.3198763364435884, 2.5916419843796437, 7.595302727798609, 2.467777512720213]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[3.03577920988238, 3.7832663401440922, 2.6728806209853193, 3.902587077760315]]}\n",
+      "{'inputs': [[4.5422396552792215, 4.9668647769783645, 6.139911268487624, 3.6616967710072865]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[6.848108237499049, 4.3012828670909, 2.5332564966096456, 6.103516079720544]]}\n",
+      "{'predictions': [2]}\n",
+      "{'inputs': [[7.483681262344087, 4.8242698178166386, 3.503416030635369, 2.2762774017934455]]}\n",
       "{'predictions': [1]}\n",
-      "{'inputs': [[7.870013766653997, 6.780612885422445, 1.1119125032388553, 6.016428335415707]]}\n",
-      "{'predictions': [1]}\n",
-      "{'inputs': [[6.132035754526192, 6.915270001129205, 7.400579021324946, 1.7296541041275217]]}\n",
+      "{'inputs': [[1.198817467791785, 2.85038746276332, 5.966364565332574, 7.541443011291955]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[5.576370359195122, 4.538209922793779, 7.758132510938234, 5.68089156518003]]}\n",
+      "{'inputs': [[7.26657433009014, 5.308204292349167, 5.8130236509975735, 7.439181618106126]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[5.22626904422254, 1.3216720891422296, 2.7794783845664557, 4.881540020133217]]}\n",
-      "{'predictions': [1]}\n",
-      "{'inputs': [[2.8533709161423193, 6.2901731496519355, 4.92323408460309, 6.754459005881102]]}\n",
+      "{'inputs': [[5.906829086110267, 1.2892190912171633, 3.3933996379608047, 5.24751088465701]]}\n",
       "{'predictions': [2]}\n",
-      "{'inputs': [[7.747419914402087, 4.4234812534242325, 1.5186912482885724, 4.803661314633349]]}\n",
-      "{'predictions': [1]}\n",
-      "{'inputs': [[2.4025730294155783, 6.42657349799176, 7.397106719210798, 5.08047697673551]]}\n",
-      "{'predictions': [2]}\n",
-      "{'inputs': [[1.6911007033876524, 2.1451355133814123, 2.61697768371193, 7.154628018713997]]}\n",
-      "{'predictions': [1]}\n",
-      "{'inputs': [[3.17112488779519, 5.507380060525274, 4.6249284076446875, 3.652520299163901]]}\n",
-      "{'predictions': [2]}\n",
-      "{'inputs': [[3.292700001059259, 6.386408547839151, 1.0250830409732417, 3.0695664329279286]]}\n",
-      "{'predictions': [0]}\n",
-      "{'inputs': [[1.4743913950013101, 3.9728508331993493, 1.9481521341933141, 2.7364483045558456]]}\n",
-      "{'predictions': [0]}\n",
-      "{'inputs': [[4.450733999137004, 6.4703985528584385, 7.514920784288283, 4.139633312728548]]}\n",
-      "{'predictions': [2]}\n",
-      "{'inputs': [[6.89074529304852, 3.521352437312861, 2.7102199685019785, 1.429325287316616]]}\n",
-      "{'predictions': [1]}"
+      "{'inputs': [[6.7180658622286815, 6.333968104638813, 4.581759342769892, 2.8924806857678727]]}\n",
+      "{'predictions': [2]}"
      ]
     }
    ],
@@ -1023,23 +974,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: irisflowerclassifier, version: 1, timestamp: 1639749130555,\n",
+      "timeout.. no more messages to read from topic\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468723,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1639749130837,\n",
-      "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
-      "predictions: 0, prediction_label:Setosa\n",
-      "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1639749130956,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468803,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1639749131094,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468901,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica\n",
       "\n",
-      "serving: irisflowerclassifier, version: 1, timestamp: 1639749131213,\n",
+      "serving: irisflowerclassifier, version: 1, timestamp: 1640099468994,\n",
       "         http_response_code: 200, model_server: FLASK, serving_tool: DEFAULT\n",
       "predictions: 2, prediction_label:Virginica"
      ]
