--- a/notebooks/featurestore/hsfs/online_transformations/builtin_online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/builtin_online_transformations.ipynb
@@ -35,7 +35,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>23</td><td>application_1633697636019_0012</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1633697636019_0012/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e02_1633697636019_0012_01_000001/onlinetf__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>6</td><td>application_1640095421114_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1640095421114_0003/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e01_1640095421114_0003_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs.register_inbuilt_transformation_functions()"
+    "fs.register_builtin_transformation_functions()"
    ]
   },
   {
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<hsfs.transformation_function.TransformationFunction object at 0x7fbe1bb42510>, <hsfs.transformation_function.TransformationFunction object at 0x7fbe1bb42190>, <hsfs.transformation_function.TransformationFunction object at 0x7fbdab3539d0>, <hsfs.transformation_function.TransformationFunction object at 0x7fbe1bb45690>]"
+      "[<hsfs.transformation_function.TransformationFunction object at 0x7efda25663d0>, <hsfs.transformation_function.TransformationFunction object at 0x7efda255fdc0>, <hsfs.transformation_function.TransformationFunction object at 0x7efda255f1f0>, <hsfs.transformation_function.TransformationFunction object at 0x7efda255f490>]"
      ]
     }
    ],
@@ -285,7 +285,9 @@
    "metadata": {},
    "source": [
     "# Create training dataset with online transformation\n",
-    "### To use online transoformation function for training dataset it must be created from hsfs `Query` object."
+    "### To use online transoformation function for training dataset it must be created from hsfs `Query` object.\n",
+    "\n",
+    "Here it is assumed that feature group `economy_fg` version 2 is already created. Otherwise please run notebook `time_travel/time_travel_python.ipynb`   \n"
    ]
   },
   {
@@ -468,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'salary': <hsfs.transformation_function.TransformationFunction object at 0x7fbe1ba9b3d0>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7fbe1ba9b890>, 'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7fbe1ba9b6d0>, 'elevel': <hsfs.transformation_function.TransformationFunction object at 0x7fbe1ba9bbd0>}"
+      "{'hyears': <hsfs.transformation_function.TransformationFunction object at 0x7efda250e580>, 'loan': <hsfs.transformation_function.TransformationFunction object at 0x7efda256d760>, 'salary': <hsfs.transformation_function.TransformationFunction object at 0x7efda256dd30>, 'elevel': <hsfs.transformation_function.TransformationFunction object at 0x7efda250e8e0>}"
      ]
     }
    ],
@@ -565,14 +567,14 @@
    "outputs": [],
    "source": [
     "td_with_splits = fs.create_training_dataset(name=\"economy_td\",\n",
-    "                               description=\"Dataset to train the some model\",\n",
-    "                               data_format=\"csv\",\n",
-    "                               transformation_functions={\"hyears\":min_max_scaler, \n",
-    "                                                         \"loan\":standard_scaler,\n",
-    "                                                         \"salary\":robust_scaler,\n",
-    "                                                         \"elevel\":label_encoder},\n",
-    "                               splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},\n",
-    "                               version=2)"
+    "                                            description=\"Dataset to train the some model\",\n",
+    "                                            data_format=\"csv\",\n",
+    "                                            transformation_functions={\"hyears\":min_max_scaler, \n",
+    "                                                                      \"loan\":standard_scaler,\n",
+    "                                                                      \"salary\":robust_scaler},\n",
+    "                                            splits={'train': 0.7, 'test': 0.2, 'validate': 0.1},\n",
+    "                                            train_split = 'train',            \n",
+    "                                            version=2)"
    ]
   },
   {
@@ -584,6 +586,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'train': 0.7, 'test': 0.2, 'validate': 0.1}"
+     ]
+    }
+   ],
+   "source": [
+    "td_with_splits.splits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
       "True\n",
       "True"
      ]
@@ -609,28 +629,32 @@
    ],
    "source": [
     "td_meta = fs.get_training_dataset(\"economy_td\", 2)\n",
-    "#`init_prepared_statement` method is needed to get serving_keys in case `get_serving_vector` has not beed called yet. Since traing dataset has splits we need to provide \n",
-    "# name the split that was used for training. Statistics of this split is used to do feature normalisations during serving.   \n",
-    "td_meta.init_prepared_statement(training_split_name=\"train\") \n",
     "td_meta.serving_keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[44, 1, 'zipcode8', 2020, 2, 0.5101909286235433, 0.0, 'car10', 179000.0, -0.6666666666666666, 1.6322836984303617]"
+      "[44, 'level1', 'zipcode8', 2020, 2, 1.0975003765406506, 0.0, 'car10', 179000.0, 0.0, 1.5763464451196538]"
      ]
     }
    ],
    "source": [
     "td_meta.get_serving_vector({'id': 2})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
