--- a/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
@@ -71,7 +71,9 @@
     "or [Hopsworks job](https://hopsworks.readthedocs.io/en/stable/user_guide/hopsworks/jobs.html).\n",
     "\n",
     "Don't decorate transformation function with Pyspark `@udf` or `@pandas_udf`, as well as don't use any Pyspark dependencies.\n",
-    "    HSFS will decorate transformation function only if it is used inside Pyspark application.\n"
+    "    HSFS will decorate transformation function only if it is used inside Pyspark application.\n",
+    "    \n",
+    "To successfully execute this example please intsall `hsfs_transformers` library from https://github.com/davitbzh/hsfs-transformer-template     \n"
    ]
   },
   {
@@ -583,7 +585,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -597,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
