--- a/notebooks/featurestore/hsfs/time_travel/time_travel_python.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel/time_travel_python.ipynb
@@ -99,7 +99,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>7</td><td>application_1633615577994_0008</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1633615577994_0008/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1633615577994_0008_01_000001/onlinetf__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>3</td><td>application_1640039836538_0005</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1640039836538_0005/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1640039836538_0005_01_000001/demo_fs_meb10000__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,25 +309,8 @@
     "    primary_key = [\"id\"], \n",
     "    partition_key = [\"year\"], \n",
     "    hudi_precombine_key = \"id\", \n",
-    "    time_travel_format = \"HUDI\",\n",
-    "    online_enabled=True \n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "demography_fg = fs.create_feature_group(\n",
-    "    name = \"demography_fg\",\n",
-    "    description = \"Hudi Demographic Feature Group\",\n",
-    "    version = 2,\n",
-    "    primary_key = [\"id\"],\n",
-    "    partition_key = [\"zipcode\"],\n",
-    "    time_travel_format=\"HUDI\",\n",
-    "    online_enabled=True     \n",
+    "    online_enabled = True,\n",
+    "    time_travel_format = \"HUDI\"\n",
     ")"
    ]
   },
@@ -337,14 +320,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "demography_fg = fs.create_feature_group(\n",
+    "    name = \"demography_fg\",\n",
+    "    description = \"Hudi Demographic Feature Group\",\n",
+    "    version = 2,\n",
+    "    primary_key = [\"id\"],\n",
+    "    partition_key = [\"zipcode\"],\n",
+    "    online_enabled = True,    \n",
+    "    time_travel_format=\"HUDI\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class_fg = fs.create_feature_group(\n",
     "    name = \"class_fg\", \n",
     "    description = \"Hudi Class Feature Group\", \n",
     "    version = 2,\n",
     "    primary_key = [\"id\"],\n",
     "    hudi_precombine_key = \"year\",\n",
-    "    time_travel_format = \"HUDI\",\n",
-    "    online_enabled=True     \n",
+    "    online_enabled = True,    \n",
+    "    time_travel_format = \"HUDI\"\n",
     ")"
    ]
   },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1633683625000, {'committedOn': '20211008090025', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1640090286000, {'committedOn': '20211221123806', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -477,10 +477,10 @@
       "+--------+---+---+------+\n",
       "| zipcode| id|age|elevel|\n",
       "+--------+---+---+------+\n",
-      "|zipcode4|  3| 49|level2|\n",
-      "|zipcode8|  2| 44|level4|\n",
       "|zipcode2|  4| 56|level0|\n",
+      "|zipcode8|  2| 44|level4|\n",
       "|zipcode5|  1| 54|level3|\n",
+      "|zipcode4|  3| 49|level2|\n",
       "+--------+---+---+------+"
      ]
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -767,8 +767,8 @@
       "|zipcode2|  7| 32|level1|\n",
       "|zipcode3|  6| 71|level2|\n",
       "|zipcode8|  2| 44|level1|\n",
-      "|zipcode4|  3| 49|level2|\n",
       "|zipcode5|  1| 54|level3|\n",
+      "|zipcode4|  3| 49|level2|\n",
       "+--------+---+---+------+"
      ]
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -813,25 +813,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1633683767000, {'committedOn': '20211008090247', 'rowsUpdated': 2, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1633683625000, {'committedOn': '20211008090025', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
-     ]
-    }
-   ],
-   "source": [
-    "for item in economy_fg.commit_details().items():\n",
-    "    print(item)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -839,13 +820,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1633683788000, {'committedOn': '20211008090308', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1633683691000, {'committedOn': '20211008090131', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1640090459000, {'committedOn': '20211221124059', 'rowsUpdated': 2, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1640090286000, {'committedOn': '20211221123806', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
    "source": [
-    "for item in demography_fg.commit_details().items():\n",
+    "for item in economy_fg.commit_details().items():\n",
     "    print(item)"
    ]
   },
@@ -858,8 +839,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1633683814000, {'committedOn': '20211008090334', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1633683717000, {'committedOn': '20211008090157', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1640090480000, {'committedOn': '20211221124120', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1640090377000, {'committedOn': '20211221123937', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+     ]
+    }
+   ],
+   "source": [
+    "for item in demography_fg.commit_details().items():\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1640090504000, {'committedOn': '20211221124144', 'rowsUpdated': 1, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1640090407000, {'committedOn': '20211221124007', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1042,16 +1042,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1633683839000, {'committedOn': '20211008090359', 'rowsUpdated': 0, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1633683767000, {'committedOn': '20211008090247', 'rowsUpdated': 2, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
-      "(1633683625000, {'committedOn': '20211008090025', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
+      "(1640090532000, {'committedOn': '20211221124212', 'rowsUpdated': 0, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1640090459000, {'committedOn': '20211221124059', 'rowsUpdated': 2, 'rowsInserted': 3, 'rowsDeleted': 0})\n",
+      "(1640090286000, {'committedOn': '20211221123806', 'rowsUpdated': 0, 'rowsInserted': 4, 'rowsDeleted': 0})"
      ]
     }
    ],
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
